Adding cart and responsive things

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -25,7 +25,7 @@
 <!-- custom javascript -->
 <script src="/media/js/script.js" type="text/javascript"></script>
 
-<script type="text/javascript">
+<script type="/media/text/javascript">
 /// some script
 
 // jquery ready start
@@ -85,11 +85,10 @@ $(document).ready(function() {
 			<div class="col-lg-4 col-sm-6 col-8">
 				<div class="widgets-wrap float-md-right">
 					<div class="widget-header  mr-3">
-						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></a>
-						<span class="badge badge-pill badge-danger notify">0</span>
+						<a href="{% url "Cart" %}" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
 					</div>
 					<div class="widget-header icontext">
-						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user"></i></a>
+						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user">user</i></a>
 						<div class="text">
 							<span class="text-muted">Welcome!</span>
 							<div> 
