--- a/templates/product/details.html
+++ b/templates/product/details.html
@@ -32,16 +32,33 @@
                 <p class="small text-muted">{{a.product.product_description}}</p>
               </div>
             </div>
+            <form method="POST">
+              {% csrf_token %}
+              <div class="form-group">
+                <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
+                  <input min=1 max=5 name="num" type="number" id="typePhone" class="form-control" placeholder="Quantity"/>
+                  <select name='size'>
+                    <option value="S">small</option>
+                    <option value="M">medium</option>
+                    <option value="L">Large</option>
+                    <option value="XL">extra large</option>
+                    <option value=" XXL">extra extra large</option>
+                  </select>
+                </div>
+              </div>
+              <div class="form-check form-check-inline">
+              </div>
             <hr class="my-0" />
             <div class="card-body">
               <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
                 <a href="#!" class="text-dark fw-bold">Cancel</a>
-                <button type="button" class="btn btn-primary">Buy now</button>
-              </div>
+                  <button type="submit" class="btn btn-primary">Buy now</button>
+              </div> 
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+</form>
 {% endblock %}
