cart is working

--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,13 +1,14 @@
 {% extends "base/base.html"%} 
 {% block start %} 
 <center><h1>Please Complete Payment Section<style>text-agile:centre</style></h1></center>
+{%for i in y%}
 <section class="h-100" style="background-color: #eee;">
   <div class="container h-100 py-5">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-10">
 
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h3 class="fw-normal mb-0 text-black">Shopping Cart</h3>
+          <h3 class="fw-normal mb-0 text-black">{{i.product.product_name}}</h3>
         </div>
 
         <div class="card rounded-3 mb-4">
@@ -15,7 +16,7 @@
             <div class="row d-flex justify-content-between align-items-center">
               <div class="col-md-2 col-lg-2 col-xl-2">
                 <img
-                  src="/media/{{x.image}}"
+                  src="/media/{{i.image}}"
                   class="img-fluid rounded-3" alt="Cotton T-shirt">
               </div>
               <div class="col-md-3 col-lg-3 col-xl-3">
@@ -37,7 +38,7 @@
                 </button>
               </div>
               <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                <h5 class="mb-0">$499.00</h5>
+                <h5 class="mb-0">${{i.product.price}}</h5>
               </div>
               <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                 <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
@@ -56,4 +57,5 @@
     </div>
   </div>
 </section>
+{%endfor%}
 {% endblock %}
