--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -51,11 +51,6 @@ $(document).ready(function() {
 			<ul class="navbar-nav">
 				<li class="nav-item"><a href="#" class="nav-link"> Call: +99812345678 </a></li>
 				<li class="nav-item dropdown">
-					 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"> English </a>
-					<ul class="dropdown-menu dropdown-menu-right" style="max-width: 100px;">
-						<li><a class="dropdown-item" href="#">Arabic</a></li>
-						<li><a class="dropdown-item" href="#">Russian </a></li>
-					</ul>
 				</li>
 			</ul> <!-- list-inline //  -->
 		  </div> <!-- navbar-collapse .// -->
@@ -85,16 +80,19 @@ $(document).ready(function() {
 			<div class="col-lg-4 col-sm-6 col-8">
 				<div class="widgets-wrap float-md-right">
 					<div class="widget-header  mr-3">
-						<a href="#" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
+						<a href="{% url "Cart" %}" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
 					</div>
 					<div class="widget-header icontext">
 						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user">user</i></a>
 						<div class="text">
+							{%if login%}
+							{%else%}
 							<span class="text-muted">Welcome!</span>
 							<div> 
 								<a href="{% url "LogIn" %}">Sign in</a> |  
 								<a href="{% url "Register" %}"> Register</a>
 							</div>
+							{%endif%}
 						</div>
 					</div>
 				</div> <!-- widgets-wrap.// -->
