--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -20,7 +20,7 @@
         {%include "base/alert.html"%}
 
       <div class="form-group">
-        <input type="text" class="form-control rounded-left" placeholder="Password" required="" name="usrname">
+        <input type="text" class="form-control rounded-left" placeholder="Username" required="" name="usrname">
         <label class="form-label"></label>
       </div>
       <div class="form-group d-flex">
