--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -46,7 +46,7 @@ $(document).ready(function() {
 			<ul class="navbar-nav d-none d-md-flex mr-auto">
 				<li class="nav-item"><a class="nav-link" href="{% url "Index" %}">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Delivery</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Payment</a></li>
+				<li class="nav-item" ><a class="nav-link" id="rzp-button1" href="{% url "Payment" %}">Payment</a></li>
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item"><a href="#" class="nav-link"> Call: +99812345678 </a></li>
@@ -79,13 +79,13 @@ $(document).ready(function() {
 			</div> <!-- col.// -->
 			<div class="col-lg-4 col-sm-6 col-8">
 				<div class="widgets-wrap float-md-right">
+					{% if user.is_authenticated %}
 					<div class="widget-header  mr-3">
 						<a href="{% url "Cart" %}" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
 					</div>
 					<div class="widget-header icontext">
 						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user">user</i></a>
 						<div class="text">
-							{% if user.is_authenticated %}
 							<span class="text-muted">Welcome {{user}}</span>
 							<div> 
 								<a href="{% url "LoG" %}">LoG_Out</a> |  
