--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -1,14 +1,16 @@
 {% extends "base/base.html"%} 
 {% block start %} 
 <center><h1>Please Complete Payment Section<style>text-agile:centre</style></h1></center>
-{%for i in y%}
+
+<h1>{{i}}</h1>
 <section class="h-100" style="background-color: #eee;">
+  {%for x,y in var%}
   <div class="container h-100 py-5">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-10">
 
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h3 class="fw-normal mb-0 text-black">{{i.product.product_name}}</h3>
+          <h3 class="fw-normal mb-0 text-black">{{x.product.product_name}}</h3>
         </div>
 
         <div class="card rounded-3 mb-4">
@@ -16,46 +18,39 @@
             <div class="row d-flex justify-content-between align-items-center">
               <div class="col-md-2 col-lg-2 col-xl-2">
                 <img
-                  src="/media/{{i.image}}"
+                  src="/media/{{x.image}}"
                   class="img-fluid rounded-3" alt="Cotton T-shirt">
               </div>
-              <div class="col-md-3 col-lg-3 col-xl-3">
-                <p class="lead fw-normal mb-2">{{x.product.product_name}}</p>
-                <p><span class="text-muted">Size: </span>{{y.product_name}}<span class="text-muted">Color: </span>Grey</p>
-              </div>
-              <div class="col-md-3 col-lg-3 col-xl-2 d-flex">
-                <button class="btn btn-link px-2"
-                  onclick="this.parentNode.querySelector('input[type=number]').stepDown()">
-                  <i class="fas fa-minus"></i>
-                </button>
-
-                <input id="form1" min="0" name="quantity" value="2" type="number"
-                  class="form-control form-control-sm" />
-
-                <button class="btn btn-link px-2"
-                  onclick="this.parentNode.querySelector('input[type=number]').stepUp()">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
+                  <div class="col-md-3 col-lg-3 col-xl-3">
+                  <p class="lead fw-normal mb-2"></p>
+                  <p><span class="text-muted">Size: </span>{{y.varient}}<span class="text-muted">Quantity: </span>{{y.items_no}}</p>
+                 </div>
               <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                <h5 class="mb-0">${{i.product.price}}</h5>
+                <h5 class="mb-0">${{x.product.price}}</h5>
               </div>
               <div class="col-md-1 col-lg-1 col-xl-1 text-end">
-                <a href="#!" class="text-danger"><i class="fas fa-trash fa-lg"></i></a>
+                <a href="{% url "move" x.uid %}" class="text-danger"><i class="fas fa-trash fa-lg"><h1>-</h1></i></a>
               </div>
             </div>
           </div>
         </div>
-        <div class="card mb-4">
+    </div>
+  </div>
+  {%endfor%}
+  <div class="card mb-4">
+    <div class="card">
+      <div class="card-body">
+        <h3>Total Price:${{price}}</h3>
+      </div>
+    </div>
+  </div>
+  <div class="card mb-4">
         <div class="card">
           <div class="card-body">
             <button type="button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button>
           </div>
         </div>
-
       </div>
-    </div>
-  </div>
 </section>
-{%endfor%}
+
 {% endblock %}
