--- a/templates/product/details.html
+++ b/templates/product/details.html
@@ -36,7 +36,7 @@
               {% csrf_token %}
               <div class="form-group">
                 <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-                  <input min=1 max=5 name="num" type="number" id="typePhone" class="form-control" placeholder="Quantity"/>
+                  <input min=1 max=5 name="num" type="number" id="typePhone" value=1 required class="form-control" placeholder="Quantity"/>
                   <select name='size'>
                     <option value="S">small</option>
                     <option value="M">medium</option>
