--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -47,7 +47,8 @@
   <div class="card mb-4">
         <div class="card">
           <div class="card-body">
-            <button type="button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button>
+            <a >
+            <button type="button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button> </a>
           </div>
         </div>
       </div>
