payment gateway integration done(stripe)

--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -1,19 +1,22 @@
 {% extends "base/base.html"%} 
 {% block start %} 
+{% load static %}
 <section style="background-color: #eee;">
     <div class="container py-5">  
       <div class="row">
         <div class="col-lg-4">
           <div class="card mb-4">
-            <div class="card-body text-center">
-                    <img id="profile_image"  src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"  
+            <div id="photo_id" class="card-body text-center" >
+                <!-- /media/{{details.profile_image}} -->
+                    <img id="profile_image"  src="/media/{{details.profile_image}}" alt="avatar"  
                     class="rounded-circle img-fluid" style="width: 150px;">
-                <form id="photo_id"> 
+                <form action="{% url "Img_update" %}" method="POST" enctype="multipart/form-data"> 
+                    {% csrf_token %}
                     <input type="file" name="myImage" accept="image/png, image/gif, image/jpeg" />
-                    <input type="submit" value="Submit"> 
+                    <input type="submit" value="Save Data"> 
                 </form>        
               <h5 class="my-3">{{user.username}}</h5>
-              <p class="text-muted mb-4">Bay Area, San Francisco, CA</p>
+              <p class="text-muted mb-4">{{details.address}}</p>
             </div>
           </div>
         </div>
@@ -25,7 +28,7 @@
                   <p class="mb-0">Full Name</p>
                 </div>
                 <div class="col-sm-9">
-                  <p class="text-muted mb-0">{{user.first_name}} {{user.last_name}}</p>
+                  <p id="givn_name" class="text-muted mb-0" >{{user.first_name}} {{user.last_name}}</p> 
                 </div>
               </div>
               <hr>
@@ -43,11 +46,10 @@
                   <p class="mb-0">Phone</p>
                 </div>
                 <div class="col-sm-9">
-                    <form id="contact" method="POST">
+                    <form id="frm" name="frm" method="POST">
                         {% csrf_token %}
-                        <input type="number" id="fname" name="mynumber" value=""> <input type="submit" value="Submit">
-                    </form>
-                </div>
+                        <input type="number" id="fname" name="mynumber" value="{{details.contact_no}}" required> 
+                    </div>
               </div>
               <hr>
               <div class="row">
@@ -55,15 +57,13 @@
                   <p class="mb-0">Gender</p>
                 </div>
                 <div class="col-sm-9">
-                    <form id="gndr" method="POST">
-                    <select name='size'>
-                        <option value="S">Male</option>
-                        <option value="M">Female</option>
-                        <option value="L">Other</option>
+                    <select name='add_gender' value="{{details.gender}}">
+                        <option value={{details.gender}} selected hidden>{{details.gender}}</option>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                        <option value="Other">Other</option>
                       </select>
-                      <input type="submit" value="Submit">
-                    </form>
-                </div>
+                 </div>
               </div>
               <hr>
               <div class="row">
@@ -71,11 +71,13 @@
                   <p class="mb-0">Address</p>
                 </div>
                 <div class="col-sm-9">
-                    <form id="residence" method="POST">
-                        <input type="text" id="fname" name="mynumber" value=""> <input type="submit" value="Submit">
-                    </form>
+                        <input type="text" id="fname" name="add_address" value="{{details.address}}" required> 
                 </div>
               </div>
+              <div >
+                <br><br><input class="btn btn-primary" type="submit" value="Update">
+            </form>
+           </div>
             </div>
           </div>
         </div>
@@ -83,25 +85,22 @@
     </div>
   </section>
 
-  <script>
-    var usr_img="{{details.profile_image}}"
-    var usr_mail="{{user.email}}"
-    var usr_no="{{details.contact_no}}"
-    var usr_gender="{{details.gender}}"
-    var usr_address="{{details.address}}"
-    if(usr_img){
-        document.getElementById('profile_image').src="/media/{{details.profile_image}}"
-        document.getElementById('photo_id').style.display='none'
-    }
-    if(usr_mail){
-    document.getElementById('new').innerHTML=bb;
-    }
-    if(usr_no){
-        document.getElementById('contact').innerHTML=usr_no;}
-    if(usr_gender){
-        document.getElementById('gndr').innerHTML=bb;}
-    if(usr_address){
-        document.getElementById('residence').innerHTML=bb;}
-  </script>
+<script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous">
+</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.5/jquery.validate.min.js"></script>
+<script>
+jQuery('#frm').validate({
+rules: {
+  mynumber:{
+    minlength:10,
+    maxlength:10
+  },
+},
+messages:{
+mynumber:"Please input a valid number"
+}
+})
+
+</script>
 
   {% endblock %}
