--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
@@ -46,7 +47,7 @@ $(document).ready(function() {
 			<ul class="navbar-nav d-none d-md-flex mr-auto">
 				<li class="nav-item"><a class="nav-link" href="{% url "Index" %}">Home</a></li>
 				<li class="nav-item"><a class="nav-link" href="#">Delivery</a></li>
-				<li class="nav-item" ><a class="nav-link" href="{% url "Pay" %}">Payment</a></li>
+				<li class="nav-item" ><a class="nav-link" href="#">Payment</a></li>
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item"><a href="#" class="nav-link"> Call: +99812345678 </a></li>
@@ -81,7 +82,7 @@ $(document).ready(function() {
 				<div class="widgets-wrap float-md-right">
 					{% if user.is_authenticated %}
 					<div class="widget-header  mr-3">
-						<a href="{% url "Cart" %}" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
+						<a href="{% url 'Cart' %}" class="icon icon-sm rounded-circle border"><i class="fas fa-tags">cart</i></a>
 					</div>
 					<div class="widget-header icontext">
 						<a href="{%url 'Profile'%}" class="icon icon-sm rounded-circle border"><i class="fa fa-user">user</i></a>
