--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -4,13 +4,13 @@
 
 <h1>{{i}}</h1>
 <section class="h-100" style="background-color: #eee;">
-  {%for x,y in var%}
+  {% for x,y in var %}
   <div class="container h-100 py-5">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-10">
 
         <div class="d-flex justify-content-between align-items-center mb-4">
-          <h3 class="fw-normal mb-0 text-black">{{x.product.product_name}}</h3>
+          <h3 class="fw-normal mb-0 text-black">{{forloop.counter}}: {{x.product.product_name}}</h3>
         </div>
 
         <div class="card rounded-3 mb-4">
@@ -23,10 +23,14 @@
               </div>
                   <div class="col-md-3 col-lg-3 col-xl-3">
                   <p class="lead fw-normal mb-2"></p>
-                  <p><span class="text-muted">Size: </span>{{y.varient}}<span class="text-muted">Quantity: </span>{{y.items_no}}</p>
+                  <p><span class="text-muted">Size: </span>{{y.varient}}</p><p><span class="text-muted">Quantity: </span>{{y.items_no}}</p>
                  </div>
               <div class="col-md-3 col-lg-2 col-xl-2 offset-lg-1">
-                <h5 class="mb-0">${{x.product.price}}</h5>
+                
+                <h5 id="price_tag{{forloop.counter}}"></h5>
+                <script>
+                  document.getElementById("price_tag{{forloop.counter}}").innerHTML=("Price: "+'{{y.items_no}}'*'{{x.product.price}}');
+                </script>
               </div>
               <div class="col-md-1 col-lg-1 col-xl-1 text-end">
                 <a href="{% url "move" x.uid %}" class="text-danger"><i class="fas fa-trash fa-lg"><h1>-</h1></i></a>
@@ -47,11 +51,12 @@
   <div class="card mb-4">
         <div class="card">
           <div class="card-body">
-            <a >
-            <button type="button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button> </a>
+            <form action="{% url 'Payment' %}" method="POST">
+            {% csrf_token %}
+            <button type="submit" id="checkout-button" class="btn btn-warning btn-block btn-lg">Proceed to Pay</button> 
+          </form>
           </div>
         </div>
       </div>
 </section>
-
 {% endblock %}
