--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -46,8 +46,8 @@ $(document).ready(function() {
 		<div class="container">
 			<ul class="navbar-nav d-none d-md-flex mr-auto">
 				<li class="nav-item"><a class="nav-link" href="{% url "Index" %}">Home</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Delivery</a></li>
-				<li class="nav-item" ><a class="nav-link" href="#">Payment</a></li>
+				<li class="nav-item"><a class="nav-link" href="{% url 'Delivery' %}">Delivery</a></li>
+				<li class="nav-item" ><a class="nav-link" href="{% url 'All_product' %}">All_product</a></li>
 			</ul>
 			<ul class="navbar-nav">
 				<li class="nav-item"><a href="#" class="nav-link"> Call: +99812345678 </a></li>
@@ -67,9 +67,10 @@ $(document).ready(function() {
 				</div> <!-- brand-wrap.// -->
 			</div>
 			<div class="col-lg-6 col-sm-12">
-				<form action="#" class="search">
+				<form id="search_id" action="{% url 'search_product' %}" method="POST"  class="search">
+					{% csrf_token %}
 					<div class="input-group w-100">
-						<input type="text" class="form-control" placeholder="Search">
+						<input type="text" name="search_content"  class="form-control" placeholder="Search" onchange="subm()">
 						<div class="input-group-append">
 						  <button class="btn btn-primary" type="submit">
 							<i class="fa fa-search"></i>
@@ -105,7 +106,13 @@ $(document).ready(function() {
 		</div> <!-- row.// -->
 			</div> <!-- container.// -->
 		</section> <!-- header-main .// -->
-		</header>
+<script>
+	function subm(){
+		document.getElementById("search_id").submit();
+	}
+</script>	
+	
+	</header>
 
 
 		{% block start %}  
